syntax = "proto3";

option go_package = "proto/";

package raft;

service Raft {
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
}

message LogEntry {
    optional uint64 index = 1;
    optional uint64 term = 2;
}

message AppendEntriesRequest {
    optional uint64 term = 1;
    optional uint64 leaderId = 2;
    optional uint64 prevLogIndex = 3;
    optional uint64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    optional uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
    optional uint64 term = 1;
    optional bool success = 2;
}

message RequestVoteRequest {
    optional uint64 term = 1;
    optional uint64 candidateId = 2;
    optional uint64 lastLogIndex = 3;
    optional uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
    optional uint64 term = 1;
    optional bool voteGranted = 2;
}